# vibedir

./: README.md  dev.md  env.example  implementation.md  improvements.html  orchestration_layer.md  prompt_design.md  pyproject.toml  vibedir.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.vibedir/: config.toml
scripts/: demo_file_link.py  demo_file_link_improved.py  example_prompt_toolkit.py  vibedir_tui.py
src/vibedir/: Lets talk software design for a python C.md  VibedirMessage.py  __init__.py  cli.py  config.py  config.toml  config.yaml  file_link.py  min_context.py  toggleable_file_link.py  vibedir.py  vibedir.yaml  vibedir_chat_widget.py  vibedir_filewatcher_mixin.py  vibedir_message.py
src/vibedir/models/: __init__.py  attachment.py  command_attachment.py  command_status.py
tests/: conftest.py  sample_prompt.md  test_attachment.py  test_config.py  test_vibedir.py  test_vibedir_message.py
