[project]
name = "vibedir"
version = "0.1.0"
description = "Utility to prompt for and apply changes to a code base using prepdir and applydir."
readme = "README.md"
authors = [
    {name = "eyecantell", email = "paul@pneuma.solutions"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup",
    "Development Status :: 4 - Beta",
]
keywords = [
    "ai",
    "artificial intelligence",
    "apply changes",
    "code review",
    "directory traversal",
    "file content",
    "project documentation",
    "code sharing",
    "developer tools",
    "large language models",
    "llm",
    "project structure",
]
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.7.1",
    "pyyaml>=6.0",
    "prepdir>=0.18.0",
    "applydir>=0.3.0",
    "openai>=1.84.0",
    "dynaconf>=3.2.6",
    "openai>=2.1.0",
    "textual>=6.6.0",
    "tiktoken>=0.12.0",
    "watchdog>=6.0.0",
    "pyperclip>=1.11.0",
    "tomli>=2.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "coverage>=7.2.7",
]

[project.scripts]
vibedir = "vibedir.vibedir:main"

[project.urls]
Repository = "https://github.com/eyecantell/vibedir"
Issues = "https://github.com/eyecantell/vibedir/issues"
Documentation = "https://github.com/eyecantell/vibedir#readme"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "src"
includes = ["src/vibedir", "src/vibedir/config.yaml"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=6.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "T20", # flake8-print
]
ignore = [
    "E501", # Line length handled by ruff formatter
]